# LyncLang

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DESCRIPTION.md  INSTALL.md  INSTALLER_README.txt  LICENSE  README.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.3.2.md  TODO.md  analyzer.c  analyzer.h  build_plugin.bat  cmm-design-doc.md  codegen.c  codegen.h  codegen_asm.c  common.h  error.c  error.h  file_loader.c  file_loader.h  install.bat  install.ps1  lexer.c  lexer.h  lync-design-doc.md  main.c  optimizer.c  optimizer.h  parser.c  parser.h  test.c  test.cmm  test.lync  test_extern.lync  test_float.lync  test_math.lync  (+5 more)
.claude/: settings.local.json
LyncLibs/: strings.lync
src/: analyzer.h  common.h  error.h  file_loader.h  lexer.c  main.c  parser.h  test.c
test/: README.md  arrays.c  arrays.lync  comprehensive_test.c  comprehensive_test.lync  feature_demo.lync  print_errors.lync  print_misuse.lync  print_misuse2.lync  print_strings.lync  print_test.lync  read_test.lync  simple_array.c  simple_array.lync  string_test.c  string_test.lync  test.lync  test_array_realloc.c  test_array_realloc.lync  test_elem_assign.c  test_elem_assign.lync  test_heap_array.c  test_heap_array.lync  test_heap_simple.lync  test_heap_with_free.c  test_heap_with_free.lync  test_include.lync  test_lexer_errors.cmm  test_match_errors.lync  test_multiple_semantic.cmm  test_ownership_errors.cmm  test_realloc.c  test_realloc.lync  test_regular_own.c  test_regular_own.lync  test_stack_only.c  test_stack_only.lync  test_successful.cmm  test_syntax_error.cmm  test_trace_mode.cmm  (+4 more)
(+6 files in other folders)
